# pcl-rust

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  PROGRESS.md  TEST.md
.github/workflows/: test.yml
pcl-rust/: Cargo.toml
pcl-rust/examples/: auto_detection_example.rs  basic_usage.rs  features_example.rs  features_showcase.rs  filter_example.rs  filters_demo.rs  generic_demo.rs  generic_point_cloud_demo.rs  icp_registration.rs  io_example.rs  keypoints_demo.rs  ransac_plane.rs  registration_showcase.rs  segmentation_demo.rs  surface_advanced_demo.rs  surface_demo.rs  test_correspondence.rs  test_correspondence_simple.rs  test_features.rs  visualization_demo.rs  visualization_generic_demo.rs  visualization_test.rs
pcl-rust/examples/future_examples/: icp_registration.rs  ransac_plane.rs  ransac_sphere.rs  segmentation_demo.rs
pcl-rust/src/: common.rs  error.rs  error_tests.rs  lib.rs  octree.rs  search.rs
pcl-rust/src/common/: builders.rs  point_cloud.rs  point_cloud_generic.rs  point_types.rs  tests.rs  transform.rs
pcl-rust/src/features/: mod.rs  tests.rs
pcl-rust/src/filters/: generic.rs  mod.rs  pass_through.rs  radius_outlier_removal.rs  statistical_outlier_removal.rs  tests.rs  voxel_grid.rs
pcl-rust/src/io/: mod.rs  pcd.rs  ply.rs  tests.rs
pcl-rust/src/keypoints/: harris.rs  iss.rs  mod.rs  sift.rs  tests.rs
pcl-rust/src/octree/: builders.rs  tests.rs  traits.rs
pcl-rust/src/registration/: correspondence.rs  icp.rs  mod.rs  ndt.rs  tests.rs  transform.rs
pcl-rust/src/sample_consensus/: mod.rs  models.rs  ransac.rs  tests.rs
pcl-rust/src/search/: generic.rs  tests.rs  traits.rs  unified.rs
pcl-rust/src/segmentation/: clustering.rs  min_cut.rs  mod.rs  polygonal_prism.rs  progressive_morphological_filter.rs  region_growing.rs  sac_segmentation.rs  tests.rs
pcl-rust/src/surface/: generic.rs  greedy_projection.rs  marching_cubes.rs  mod.rs  moving_least_squares.rs  organized_fast_mesh.rs  poisson.rs  polygon_mesh.rs  tests.rs
pcl-rust/src/traits/: mod.rs  point_cloud.rs
pcl-rust/src/visualization/: README.md  advanced.rs  cloud_viewer.rs  generic.rs  generic_impl.rs  mod.rs  pcl_visualizer.rs  properties.rs
pcl-rust/src/visualization.disabled/: cloud_viewer.rs  generic.rs
pcl-sys/: Cargo.toml  build.rs
pcl-sys/cxx/: common.cpp  common_functions.h  common_impl.h  features.cpp  features_impl.h  features_test.cpp  filters.cpp  functions.h  functions_backup.h  io.cpp  keypoints.cpp  keypoints_impl.h  octree.cpp  pch.h  precompiled.h  raw_ptr_functions.cpp  raw_ptr_functions.h  registration.cpp  sample_consensus.cpp  sample_consensus_backup.cpp  search.cpp  segmentation.cpp  segmentation_impl.h  surface.cpp  surface_impl.h  types.h  visualization.cpp  visualization_stubs.h  visualization_vtk.h
pcl-sys/src/: common.rs  lib.rs  migration.rs  octree.rs  pcl_types.rs  ptr.rs  raw_ffi.rs  search.rs
pcl-sys/src/common/: point_cloud.rs  point_types.rs
pcl-sys/src/features/: mod.rs
pcl-sys/src/filters/: mod.rs  pass_through.rs  radius_outlier_removal.rs  statistical_outlier_removal.rs  voxel_grid.rs
pcl-sys/src/io/: mod.rs  pcd.rs  ply.rs
pcl-sys/src/keypoints/: mod.rs
pcl-sys/src/registration/: mod.rs
pcl-sys/src/sample_consensus/: mod.rs  models.rs  ransac.rs
pcl-sys/src/segmentation/: mod.rs
pcl-sys/src/surface/: mod.rs
pcl-sys/src/visualization/: mod.rs
