[package]
name = "pcl"
version = "0.1.0"
edition = "2024"
description = "Safe Rust bindings for Point Cloud Library (PCL)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/pcl-rust"

[features]
default = ["search", "io", "filters"]
full = [
    "search", "io", "filters", "surface", "octree", "visualization",
    "features", "keypoints", "registration", "segmentation", "sample_consensus"
]

# Core modules
search = ["pcl-sys/search"]
io = ["pcl-sys/io"]
octree = ["pcl-sys/octree", "search"]  # octree depends on search module

# Processing modules
filters = ["pcl-sys/filters", "search"]  # filters uses search functionality
surface = ["pcl-sys/surface", "search"]  # surface uses search functionality
visualization = ["pcl-sys/visualization"]

# Advanced modules
features = ["pcl-sys/features", "search"]  # features uses search for KdTree
keypoints = ["pcl-sys/keypoints", "search"]  # keypoints likely uses search
registration = ["pcl-sys/registration", "search"]  # registration likely uses search
segmentation = ["pcl-sys/segmentation"]
sample_consensus = ["pcl-sys/sample_consensus"]

[dependencies]
pcl-sys = { path = "../pcl-sys", default-features = false }
thiserror = "1.0"
cxx = "1.0"

[dev-dependencies]
tempfile = "3.0"

# Examples with required features
[[example]]
name = "basic_usage"
required-features = ["search", "octree"]

[[example]]
name = "features_showcase"
required-features = ["features", "search", "octree"]

[[example]]
name = "test_features"
required-features = ["features", "search", "octree"]

[[example]]
name = "io_example"
required-features = ["io"]

[[example]]
name = "filter_example"
required-features = ["filters"]

[[example]]
name = "filters_demo"
required-features = ["filters"]

[[example]]
name = "auto_detection_example"
required-features = ["search", "octree", "io"]
