[package]
name = "pcl-sys"
version = "0.1.0"
edition = "2024"
description = "Low-level FFI bindings for Point Cloud Library (PCL)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/pcl-rust"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3"
